Reparando bug quando o conteúdo é carregado, foi adicionado uma classe de overflow hidden para que o usuário não possa fazer a rolagem na página

--- a/app/styles/helpers.scss
+++ b/app/styles/helpers.scss
@@ -17,3 +17,8 @@
 .carrot{
   background-color: $carrot;
 }
+
+
+.overflow-hidden{
+  overflow: hidden;
+}
