--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -62,6 +62,7 @@ body {
 }
 .row{
   position: relative;
+  margin: 0px;
 }
 .header{
   margin-bottom:0px;
@@ -168,8 +169,7 @@ time{
 /* Custom page footer */
 .footer {
   padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+  color: white;
 }
 
 .container-narrow > hr {
@@ -493,8 +493,10 @@ time{
   height: 100%;
   min-height: 480px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-top: 5rem;
   z-index: 999;
   background-color: white;
   img{
